--- a/gb/23/1/1/n13896668.md
+++ b/gb/23/1/1/n13896668.md
@@ -1,24 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新西兰大法弟子恭祝师尊新年好</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897207-Auckland2-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2023年01月01日讯】（大纪元记者杨楠<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>奥克兰报导)2023年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%B9%B4.md#1">新年</a>的钟声已经敲响，新的一年即将开始。在这特殊的时刻，新西兰多个城市的大法弟子怀着无比感恩的心情，向慈悲伟大的李洪志<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%88%E7%88%B6.md#1">师父</a>表达<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%B9%B4.md#1">新年</a>的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%97%AE%E5%80%99.md#1">问候</a>。</p>
-<p>在惠灵顿、奥克兰、汉密尔顿、基督城，不同族裔、不同年龄、不同职业的法轮功学员聚集在一起，恭祝师尊新年快乐，感恩师尊将<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>传世。同时，他们用亲身经历告诉人们，法轮大法是高德大法，真善忍的宇宙法理能从本质上改变一个人，让人修心向善，成为一个更好的人。</p>
+<p>【大纪元2023年01月01日讯】（大纪元记者杨楠新西兰奥克兰报导)2023年新年的钟声已经敲响，新的一年即将开始。在这特殊的时刻，新西兰多个城市的大法弟子怀着无比感恩的心情，向慈悲伟大的李洪志师父表达新年的问候。</p>
+<p>在惠灵顿、奥克兰、汉密尔顿、基督城，不同族裔、不同年龄、不同职业的法轮功学员聚集在一起，恭祝师尊新年快乐，感恩师尊将法轮大法传世。同时，他们用亲身经历告诉人们，法轮大法是高德大法，真善忍的宇宙法理能从本质上改变一个人，让人修心向善，成为一个更好的人。</p>
 <p>&nbsp;</p>
-<figure id="attachment_13896705" aria-describedby="caption-attachment-13896705" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896705-0cceddd2f31bea215176cb10701d1e3e.png"><img class="size-large wp-image-13896705" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896705-0cceddd2f31bea215176cb10701d1e3e-600x450.png" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13896705" class="wp-caption-text">二零二三年新年来临之际，惠灵顿部分法轮功学员向法轮大法创始人李洪志师父表达问候。（袁弘／大纪元）</figcaption></figure>
+<figure id="attachment_13896705" aria-describedby="caption-attachment-13896705" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896705-0cceddd2f31bea215176cb10701d1e3e.png"><img loading="lazy" decoding="async" class="size-large wp-image-13896705" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896705-0cceddd2f31bea215176cb10701d1e3e-600x450.png" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13896705" class="wp-caption-text">二零二三年新年来临之际，惠灵顿部分法轮功学员向法轮大法创始人李洪志师父表达问候。（袁弘／大纪元）</figcaption></figure>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<figure id="attachment_13896714" aria-describedby="caption-attachment-13896714" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896714-a6ccaca28e105db14161960a9db23057.png"><img class="size-large wp-image-13896714" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896714-a6ccaca28e105db14161960a9db23057-600x338.png" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-13896714" class="wp-caption-text">二零二三年新年来临之际，汉密尔顿部分法轮功学员向法轮大法创始人李洪志师父表达问候。（宋娅／大纪元）</figcaption></figure>
-<p>&nbsp;</p>
-<figure id="attachment_13896723" aria-describedby="caption-attachment-13896723" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896723-2720a5e19ef453cc0b2abd12cab2980a.png"><img class="size-large wp-image-13896723" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896723-2720a5e19ef453cc0b2abd12cab2980a-600x400.png" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13896723" class="wp-caption-text">二零二三年新年来临之际，基督城部分法轮功学员向法轮大法创始人李洪志师父表达问候。（金玉清／大纪元）</figcaption></figure>
+<figure id="attachment_13896714" aria-describedby="caption-attachment-13896714" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896714-a6ccaca28e105db14161960a9db23057.png"><img loading="lazy" decoding="async" class="size-large wp-image-13896714" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896714-a6ccaca28e105db14161960a9db23057-600x338.png" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-13896714" class="wp-caption-text">二零二三年新年来临之际，汉密尔顿部分法轮功学员向法轮大法创始人李洪志师父表达问候。（宋娅／大纪元）</figcaption></figure>
+<figure id="attachment_13896723" aria-describedby="caption-attachment-13896723" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896723-2720a5e19ef453cc0b2abd12cab2980a.png"><img loading="lazy" decoding="async" class="size-large wp-image-13896723" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896723-2720a5e19ef453cc0b2abd12cab2980a-600x400.png" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13896723" class="wp-caption-text">二零二三年新年来临之际，基督城部分法轮功学员向法轮大法创始人李洪志师父表达问候。（金玉清／大纪元）</figcaption></figure>
 <p>&nbsp;</p>
 <h2>基督城学员谢师尊： 得法后的心是透亮的</h2>
-<p>基督城大法弟子张泽英曾经参加过<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%88%E7%88%B6.md#1">师父</a>在大陆的传法班，谈及往事，她的声音有些哽咽。</p>
+<p>基督城大法弟子张泽英曾经参加过师父在大陆的传法班，谈及往事，她的声音有些哽咽。</p>
 <p>“我今年70多岁了，小时候家里穷，没有念几年书。所以心里总是悲观，都是负面的想法，觉得人生很苦。修炼之后，明白了人为什么有苦有难，我的心态完全变了，得法前我的心是暗暗的，得法后我的心是透亮的。在大陆证实法那个环境，做好三件事很坎坷，但是在师父的呵护下，20多年我一步一步的走过来了。”</p>
-<p>张泽英前几年来<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>之后，一段时间很苦恼，因为语言不通，生活不方便，生活和修炼都面临新的挑战。</p>
+<p>张泽英前几年来新西兰之后，一段时间很苦恼，因为语言不通，生活不方便，生活和修炼都面临新的挑战。</p>
 <p>“磨难中，我想起师父多年前在郑州传法班上讲的一句话，师父说我们这些学员是种子，我们下去之后要发挥种子的作用，弘扬大法。我想不管在哪里，我要完成师父交给我的任务，发挥种子的作用，就这样，经过一段时间的迷茫和不适应之后，我终于走出去发大法真相单张，即使是一个微笑我觉得也和这里的众生结缘。”</p>
 <p>回首走过的路，张泽英感慨万千，“不知道慈悲伟大的师尊为我操了多少心，牵着弟子的手走过了这20多年的风雨路程，尽管弟子有时做的不好，有师在、有法在，跌倒了再爬起来，这次做不好了，回去悟对了再重新做。 让我一点点走过来，看到自己的不足，感到师父和大法的伟大。身心不断地被大法洗净升华，这种殊胜的感受只有我自己才能体会到。谢谢师父，祝师父新年好！”</p>
 <h2>汉密尔顿学员：“有真善忍，才不会随波逐流”</h2>
@@ -28,63 +26,52 @@
 <p>刚刚当妈妈的张明筑感恩的说：“大法修炼要求我们不脱离常人社会，所遇到的考验处处离不开名、利、情，每当自己感到过不去的心性关冲击时，不能总在第一时间认识上来，但随着不断学法，往往会在其中得到启发进而转念去对待表象上的关、难，问题也迎刃而解。”</p>
 <p>两人都非常感恩师父传出这部大法，让他们明白如何做一个更好的人，如何修炼，特别在为人父母之后，更体会到在当前世风日下的社会环境，要如何育好下一代，为孩子奠下修炼环境的重要。在此恭祝师尊新年好，谢谢师父。</p>
 <h2>奥克兰学员： 全家修炼 沐浴法光</h2>
-<p>&nbsp;</p>
-<figure id="attachment_13896727" aria-describedby="caption-attachment-13896727" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896727-8b51750d1045543bd362800d2e9cfe84.png"><img class="size-large wp-image-13896727" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896727-8b51750d1045543bd362800d2e9cfe84-600x742.png" alt="" width="600" b="742" /></a><figcaption id="caption-attachment-13896727" class="wp-caption-text">Ailsa Chen 表示：“我代表全家感恩伟大师尊的慈悲苦度，师尊新年好！（明慧网）</figcaption></figure>
+<figure id="attachment_13896727" aria-describedby="caption-attachment-13896727" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13896727-8b51750d1045543bd362800d2e9cfe84.png"><img loading="lazy" decoding="async" class="size-large wp-image-13896727" src="https://i.epochtimes.com/assets/uploads/2023/01/id13896727-8b51750d1045543bd362800d2e9cfe84-600x742.png" alt="" width="600" b="742" /></a><figcaption id="caption-attachment-13896727" class="wp-caption-text">Ailsa Chen 表示：“我代表全家感恩伟大师尊的慈悲苦度，师尊新年好！（明慧网）</figcaption></figure>
 <p>&nbsp;</p>
 <p>在新西兰奥克兰从事地产工作的Ailsa Chen在中国出生时正好赶上计划生育，一家只能有一个孩子，当时Ailsa已经有了一个姐姐。Alisa 的父母不愿无辜的生命在母亲的肚子里就被扼杀，坚决要生下她。因此，Ailsa 一家人被迫开始逃亡，以躲避计划生育部门的追杀，好几次出现险情，但每次都化险为夷。“我妈妈经常对我讲，在我还没出生的时候，就有神仙看护着我，使我平安的来到人世间得法。”<br />
 Ailsa 从小跟着母亲一起修炼法轮功，亲眼见证了母亲从以前病怏怏的样子变的健康开朗，她自然而然也开始走入了修炼，她家成了当地的炼功点，人人都沐浴在佛光之中。<br />
-如今的她已在新西兰结婚生子，生活幸福美满。每次大法活动都是全家参加。“我们希望让生活在新西兰的善良民众，更多了解<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95.md#1">法轮大法</a>的真相，认清中共的邪恶。”</p>
+如今的她已在新西兰结婚生子，生活幸福美满。每次大法活动都是全家参加。“我们希望让生活在新西兰的善良民众，更多了解法轮大法的真相，认清中共的邪恶。”</p>
 <h2>三生有幸 得此大法 感恩师尊</h2>
 <p>基督城大法弟子新莲是1994年得法的，至今已经28年了。谈到得法前后的变化，她非常感谢师父的救度。</p>
 <p>“得法前我因为家庭变故万念俱灰，想出家，想找根绳子一了百了，真是身心疲惫，满身病业，没有一天舒服的。后来听我的同事说她炼法轮功身体好了，我说我也想炼。就这样我开始了修炼法轮功。修炼使我明白了生命的意义，身心得以净化，浑身轻松，整天乐呵呵的，觉得自己太幸运了，得到了这么好的大法，真是三生有幸，太感谢师父了。修炼至今28年过去了，我从未吃过一片药，看过一次病。”</p>
 <p>新莲表示，“没有师父的慈悲救度，我就没有今天。用尽人类的语言也无法表达我对慈悲伟大师尊的感恩。因我坚持修炼法轮大法，丈夫部队强行逼我和他离婚了。我和儿子来到新西兰后，我非常珍惜师尊给我安排的修炼道路，我知道唯有精进实修，按照师父的要求，做好三件事，兑现史前誓约，这也是师父所要的。这也是我必须努力做到的。在此，弟子恭祝师父新年快乐！”</p>
 <p>责任编辑：蓝克</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/1/1/n1575604.md#1">世界各地法轮功学员恭贺创始人新年好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/11/29/n2737895.md#1">曹叔一家6年在新西兰中领馆前的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/1/2/n2773514.md#1">亚太地区大法弟子向法轮功创始人恭祝新年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/1/1/n3130076.md#1">亚洲、澳洲法轮功学员恭祝李洪志大师元旦快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/23/n3494031.md#1">亚太地区法轮功学员恭祝李洪志大师新年好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/24/n3494588.md#1">大陆法轮功学员恭祝李洪志大师新年好（349条）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/2/n10949086.md#1">海外五十余国弟子恭祝师父新年好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/29/n11010610.md#1">海外50余国法轮功学员向李洪志师父拜年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/2/n11763592.md#1">58国和地区的法轮功学员恭祝李洪志大师新年好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/13/n11790768.md#1">55国海外法轮功学员敬祝李洪志师父过年好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/1/1/n1575604.md#1">世界各地法轮功学员恭贺创始人新年好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/11/29/n2737895.md#1">曹叔一家6年在新西兰中领馆前的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/1/2/n2773514.md#1">亚太地区大法弟子向法轮功创始人恭祝新年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/1/1/n3130076.md#1">亚洲、澳洲法轮功学员恭祝李洪志大师元旦快乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/1/23/n3494031.md#1">亚太地区法轮功学员恭祝李洪志大师新年好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/1/24/n3494588.md#1">大陆法轮功学员恭祝李洪志大师新年好（349条）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10949086.md#1">海外五十余国弟子恭祝师父新年好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010610.md#1">海外50余国法轮功学员向李洪志师父拜年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/2/n11763592.md#1">58国和地区的法轮功学员恭祝李洪志大师新年好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/13/n11790768.md#1">55国海外法轮功学员敬祝李洪志师父过年好</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/7/n10959110.md#1" target="_blank">冯八飞：请问候劳鹤——真正的知识分子爱因斯坦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/8/2/n2983321.md#1" target="_blank">诚宇：捅破心灵的那层窗户纸</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992574.md#1">【未解之谜】挑战进化论的微生物界</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987863.md#1">中华传统母亲花是哪一种？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13991887.md#1">千古一诗《游子吟》是怎么写成的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979812.md#1">【经典小说选登】吕大郎还金完骨肉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13994305.md#1">美的泉源</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/13/n13995977.md#1">【未解之谜】离人间仙境一步之遥 他为何放弃了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/13/n13995567.md#1">【十字路口】一亿人的冤案 中共最大的恐惧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/13/n13996140.md#1">【新唐人大视野】连载40年 尊子漫画遭停刊背后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/12/n13994803.md#1">汪文斌否认中国是发达国家 评论翻车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/12/n13994366.md#1">拼多多总部迁址 中国公司纷纷淡化中国背景</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/9/n13992381.md#1">【直播】庆5?13法轮大法日 纽约盛大游行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13994325.md#1">蔡天凤案再提讯 传郭富城曾起关键作用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/12/n13994967.md#1">“AI孙燕姿”翻唱爆红网络 版权争议引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/10/n13993323.md#1">曾受柯受良托付 周杰伦与柯有伦情同兄弟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13994194.md#1">周杰伦周星驰香港相见欢 粉丝期待两人合作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993623.md#1">克里斯演《雷神》前经济困顿 操心父母的房贷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/7/n13990386.md#1">地瓜富含特殊营养 控血糖防心脏病 1吃法效果佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993654.md#1">你见过用沙子洗碗盘吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/12/n13994545.md#1">想健康快乐吗？ 美国102岁医生：别做这件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/13/n13995222.md#1">毛巾3日不洗细菌量如马桶 简单2招杀菌除异味</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/5/n13988866.md#1">家具混搭4妙招 营造专属的空间 别人无法复制</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/1/n13896668.htm">新西兰大法弟子恭祝师尊新年好</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/1/1/n13896668.htm">新西兰大法弟子恭祝师尊新年好</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/1/n13896668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
